--- a/tshirt/index.html
+++ b/tshirt/index.html
@@ -7,9 +7,9 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@yufenhsi" />
     <meta name="twitter:creator" content="@yufenhsi" />
-    <meta property="og:url" content="https://yufenhsi.github.io/MI-449-SS18-740-html-meta-elements-_f2DoK/tshirt" />
+    <meta property="og:url" content="https://yufenhsi.github.io/MI-449-SS18-740-html-meta-elements-_f2DoK/tshirt/" />
     <meta property="og:title" content="Parade of Fans for Comics" />
-    <meta name="description" content="HAMU's best selling T-shirts are all featured products. These T-shirts are well-designed and there are the most popular images on the top of them-from Marvel Comics characters to manga characters." />
+    <meta property="og:description" content="HAMU's best selling T-shirts are all featured products. These T-shirts are well-designed and there are the most popular images on the top of them-from Marvel Comics characters to manga characters." />
     <meta property="og:image" content="https://yufenhsi.github.io/MI-449-SS18-740-html-meta-elements-_f2DoK/tshirt/digital_wizard_hoodie.jpg" />
     <title>HANU T-shirt</title>
     <link rel="stylesheet" href="stylish.css">
