build a simple webpage andadd metadata to improve SEO

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <meta name="twitter:creator" content="@yufenhsi" />
     <meta property="og:url" content="https://yufenhsi.github.io/MI-449-SS18-740-html-meta-elements-_f2DoK/" />
     <meta property="og:title" content="Parade of Fans for Comics" />
-    <meta property="og:description" content="HAMU provides special geeky products with high quality to you-including clothing, shoes, gadgets and accessories. HAMU is the best choice for Geeks!" />
+    <meta property="og:description" content="HAMU provides clothing, shoes, gadgets and accessories. HAMU is the best choice for Geeks!" />
     <meta name="og:image" content="https://yufenhsi.github.io/MI-449-SS18-740-html-meta-elements-_f2DoK/gadges.jpg" />
+    <meta name="description" content="HAMU provides special geeky products with high quality to you-including clothing, shoes, gadgets and accessories. HAMU is the best choice for Geeks!">
     <title>HAMU Homepage</title>
     <link rel="stylesheet" href="stylish.css">
     <link rel="shortcut icon" href="favicon.ico">
