fix Facebook warning and nav links and use unique titles and desc commits

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@yufenhsi" />
     <meta name="twitter:creator" content="@yufenhsi" />
-    <meta property="og:url" content="https://yufenhsi.github.io/MI-449-SS18-740-html-meta-elements-_f2DoK/" />
+    <meta property="fb:app_id" content="1234567890"/>
     <meta property="og:title" content="Parade of Fans for Comics" />
-    <meta property="og:description" content="HAMU provides clothing, shoes, gadgets and accessories. HAMU is the best choice for Geeks!" />
-    <meta name="og:image" content="https://yufenhsi.github.io/MI-449-SS18-740-html-meta-elements-_f2DoK/gadges.jpg" />
+    <meta property="og:type" content="Featured Geeky Website" />
+    <meta property="og:description" content="All the most popular animted and technical things are in this website. You cannot miss it!" />
+    <meta property="og:url" content="https://yufenhsi.github.io/MI-449-SS18-740-html-meta-elements-_f2DoK/" />
+    <meta property="og:image" content="https://yufenhsi.github.io/MI-449-SS18-740-html-meta-elements-_f2DoK/gadges.jpg" />
     <meta name="description" content="HAMU provides special geeky products with high quality to you-including clothing, shoes, gadgets and accessories. HAMU is the best choice for Geeks!">
     <title>HAMU Homepage</title>
     <link rel="stylesheet" href="stylish.css">
@@ -19,8 +21,8 @@
   <body>
     <nav class="navigation-bar">
       <img src="logo-1520032552.jpg" alt="logo picture" width="50" height="50">
-      <a class="active" href="/">Home</a>
-      <a href="/tshirt">Best-selling T-shirt</a>
+      <a class="active" href="./index.html">Home</a>
+      <a href="./tshirt/index.html">Best-selling T-shirt</a>
     </nav>
     <img src="Rey-Force-FX-lightsaber.jpg" alt="lightsaber picture" class="center">
     <div class="row">
