--- a/tshirt/index.html
+++ b/tshirt/index.html
@@ -7,9 +7,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@yufenhsi" />
     <meta name="twitter:creator" content="@yufenhsi" />
+    <meta property="fb:app_id" content="1234567890"/>
+    <meta property="og:title" content="Distinctive Animation Clothing" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Providing stylish outfits for fans of games, movies and comics. Make you look cool instantly!" />
     <meta property="og:url" content="https://yufenhsi.github.io/MI-449-SS18-740-html-meta-elements-_f2DoK/tshirt/" />
-    <meta property="og:title" content="Parade of Fans for Comics" />
-    <meta property="og:description" content="HAMU's T-shirts are well-designed and there are the most popular images from Marvel Comics characters to manga characters." />
     <meta property="og:image" content="https://yufenhsi.github.io/MI-449-SS18-740-html-meta-elements-_f2DoK/tshirt/digital_wizard_hoodie.jpg" />
     <meta name="description" content="HAMU's best selling T-shirts are all featured products. These T-shirts are well-designed and there are the most popular images on the top of them-from Marvel Comics characters to manga characters.">
     <title>HANU T-shirt</title>
@@ -19,8 +21,8 @@
   <body>
     <nav class="navigation-bar">
       <img src="logo-1520032552.jpg" alt="logo picture" width="50" height="50">
-      <a class="active" href="/">Home</a>
-      <a href="/tshirt">Best-selling T-shirt</a>
+      <a class="active" href="../index.html">Home</a>
+      <a href="./index.html">Best-selling T-shirt</a>
     </nav>
     <h1>Best-selling Clothing</h1>
     <hr>
