fix Facebook warning and nav links and use unique titles and desc commits

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="twitter:creator" content="@yufenhsi" />
     <meta property="fb:app_id" content="1678641972181977"/>
     <meta property="og:title" content="Parade of Fans for Comics" />
-    <meta property="og:type" content="Featured Geeky Website" />
+    <meta property="og:type" content="website" />
     <meta property="og:description" content="All the most popular animted and technical things are in this website. You cannot miss it!" />
     <meta property="og:url" content="https://yufenhsi.github.io/MI-449-SS18-740-html-meta-elements-_f2DoK/" />
     <meta property="og:image" content="https://yufenhsi.github.io/MI-449-SS18-740-html-meta-elements-_f2DoK/gadges.jpg" />
