remove index.html on Navigation links, add twitter:title and twitter:description, change twitter:card value to summary

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <meta name="geo.position" content="25.0360228;121.5643863">
     <meta name="ICBM" content="25.0360228, 121.5643863">
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@yufenhsi" />
     <meta name="twitter:creator" content="@yufenhsi" />
+    <meta name="twitter:title" content="Parade of Fans for Comics">
+    <meta name="twitter:description" content="Welcome to Distinct Your Dressing - Clothing, Shoes, Accessories">
     <meta property="fb:app_id" content="1678641972181977"/>
     <meta property="og:title" content="Parade of Fans for Comics" />
     <meta property="og:type" content="website" />
@@ -21,8 +23,8 @@
   <body>
     <nav class="navigation-bar">
       <img src="logo-1520032552.jpg" alt="logo picture" width="50" height="50">
-      <a class="active" href="./index.html">Home</a>
-      <a href="./tshirt/index.html">Best-selling T-shirt</a>
+      <a class="active" href="./">Home</a>
+      <a href="tshirt">Best-selling T-shirt</a>
     </nav>
     <img src="Rey-Force-FX-lightsaber.jpg" alt="lightsaber picture" class="center">
     <div class="row">
