--- a/tshirt/index.html
+++ b/tshirt/index.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8">
     <meta name="geo.position" content="25.0360228;121.5643863">
     <meta name="ICBM" content="25.0360228, 121.5643863">
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@yufenhsi" />
     <meta name="twitter:creator" content="@yufenhsi" />
+    <meta name="twitter:title" content="Parade of Fans for Comics">
+    <meta name="twitter:description" content="Welcome to Distinct Your Dressing - Clothing, Shoes, Accessories">
     <meta property="fb:app_id" content="1678641972181977"/>
     <meta property="og:title" content="Distinctive Animation Clothing" />
+    <meta name="twitter:description" content="Welcome to Distinct Your Dressing - Clothing, Shoes, Accessories">
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Providing stylish outfits for fans of games, movies and comics. Make you look cool instantly!" />
     <meta property="og:url" content="https://yufenhsi.github.io/MI-449-SS18-740-html-meta-elements-_f2DoK/tshirt/" />
@@ -21,8 +24,8 @@
   <body>
     <nav class="navigation-bar">
       <img src="logo-1520032552.jpg" alt="logo picture" width="50" height="50">
-      <a class="active" href="../index.html">Home</a>
-      <a href="./index.html">Best-selling T-shirt</a>
+      <a class="active" href="../">Home</a>
+      <a href="../tshirt">Best-selling T-shirt</a>
     </nav>
     <h1>Best-selling Clothing</h1>
     <hr>
