change twitter:title on tshirt page, change twitter:description content on homepage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="twitter:site" content="@yufenhsi" />
     <meta name="twitter:creator" content="@yufenhsi" />
     <meta name="twitter:title" content="Parade of Fans for Comics">
-    <meta name="twitter:description" content="Welcome to Distinct Your Dressing - Clothing, Shoes, Accessories">
+    <meta name="twitter:description" content="Welcome to HAMU Website - A great place for your comics collections">
     <meta property="fb:app_id" content="1678641972181977"/>
     <meta property="og:title" content="Parade of Fans for Comics" />
     <meta property="og:type" content="website" />
