--- a/tshirt/index.html
+++ b/tshirt/index.html
@@ -7,11 +7,10 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@yufenhsi" />
     <meta name="twitter:creator" content="@yufenhsi" />
-    <meta name="twitter:title" content="Parade of Fans for Comics">
+    <meta name="twitter:title" content="Distinctive Animation Clothing">
     <meta name="twitter:description" content="Welcome to Distinct Your Dressing - Clothing, Shoes, Accessories">
     <meta property="fb:app_id" content="1678641972181977"/>
     <meta property="og:title" content="Distinctive Animation Clothing" />
-    <meta name="twitter:description" content="Welcome to Distinct Your Dressing - Clothing, Shoes, Accessories">
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Providing stylish outfits for fans of games, movies and comics. Make you look cool instantly!" />
     <meta property="og:url" content="https://yufenhsi.github.io/MI-449-SS18-740-html-meta-elements-_f2DoK/tshirt/" />
